fix: img problem (Saturday, Oct 16, 2021 22:59)

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -19,20 +19,16 @@
                <div id="overflow">
                   <div class="inner">
                      <div class="slide slide_1">
-                        <div class="slide-content">
-                        </div>
+                           <img src="mem1.jpg" alt="">
                      </div>
                      <div class="slide slide_2">
-                        <div class="slide-content">
-                        </div>
+                        <img src="mem2.jpg" alt="">
                      </div>
                      <div class="slide slide_3">
-                        <div class="slide-content">
-                        </div>
+                        <img src="mem3.jpg" alt="">
                      </div>
                      <div class="slide slide_4">
-                        <div class="slide-content">
-                        </div>
+                        <img src="mem4.jpg" alt="">
                      </div>
                   </div>
                </div>
@@ -41,24 +37,16 @@
                 <div id="overflow2">
                    <div class="inner">
                       <div class="slide">
-                         <div class="slide-content">
-                             <p>Смешная надпись</p>
-                         </div>
+                             <p>Сделаешь мемный слайдер?</p>
                       </div>
                       <div class="slide">
-                         <div class="slide-content">
-                            <p>Снова понедельник</p>
-                         </div>
+                            <p>...Но без JS</p>
                       </div>
                       <div class="slide">
-                         <div class="slide-content">
-                            <p>Смешной текст3</p>
-                         </div>
+                            <p>Когда нужно опять искать ошибку в коде</p>
                       </div>
                       <div class="slide">
-                         <div class="slide-content">
-                            <p>Yes or not</p>
-                         </div>
+                            <p>Всего на 20 минут</p>
                       </div>
                    </div>
                 </div>
