init: img (Saturday, Oct 16, 2021 23:10)

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -19,16 +19,16 @@
                <div id="overflow">
                   <div class="inner">
                      <div class="slide slide_1">
-                           <img src="mem1.jpg" alt="">
+                           <img src="img/mem1.jpg" alt="">
                      </div>
                      <div class="slide slide_2">
-                        <img src="mem2.jpg" alt="">
+                        <img src="img/mem2.jpg" alt="">
                      </div>
                      <div class="slide slide_3">
-                        <img src="mem3.jpg" alt="">
+                        <img src="img/mem3.jpg" alt="">
                      </div>
                      <div class="slide slide_4">
-                        <img src="mem4.jpg" alt="">
+                        <img src="img/mem4.jpg" alt="">
                      </div>
                   </div>
                </div>
